# dstack

./: Cargo.toml
.github/workflows/: kms-release.yml
basefiles/: dstack-prepare.sh
cc-eventlog/src/: lib.rs
cert-client/src/: lib.rs
docs/tpm/: COMPARISON_WITH_GO_ATTESTATION.md  README.md
dstack-mr/src/: acpi.rs  machine.rs  tdvf.rs
dstack-types/src/: lib.rs
dstack-util/src/: main.rs  system_setup.rs
dstack-util/src/system_setup/: config_id_verifier.rs
guest-agent/src/: rpc_service.rs
kms/src/: main_service.rs
kms/tapp/: compose-dev.yaml
ra-tls/: Cargo.toml
ra-tls/src/: attestation.rs  cert.rs
sdk/rust/: README.md
sdk/rust/src/: dstack_client.rs  lib.rs
sdk/rust/tests/: legacy-info-api-response.json  test_client.rs  test_client_v3.rs  test_eth.rs
tdx-attest/src/: lib.rs  linux.rs
teepod/src/: app.rs
teepod/src/app/: qemu.rs
tpm/: Cargo.toml
tpm-attest/src/: gcp_ak.rs
tpm-qvl/src/: collateral.rs  lib.rs  verify.rs
tpm/examples/: gcp_ak_test.rs
tpm/src/: esapi_impl.rs  gcp_ak.rs  lib.rs  verify.rs
tproxy/: tproxy.toml
tproxy/src/: config.rs  main_service.rs
verifier/: Cargo.toml
verifier/src/: lib.rs  main.rs  verification.rs
vmm/: Cargo.toml  api.md  vmm.toml
vmm/rpc/proto/: vmm_rpc.proto
vmm/src/: app.rs  config.rs
vmm/src/app/: qemu.rs
vmm/ui/src/composables/: useVmManager.ts
